[package]
name = "slog-async"
version = "2.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Asynchronous drain for slog-rs"
keywords = ["slog", "logging", "log", "asynchronous"]
categories = ["development-tools::debugging"]
license = "MPL-2.0/MIT/Apache-2.0"
documentation = "https://docs.rs/slog-async"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/async"
readme = "README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = "2"
thread_local = "0.3.3"
take_mut = "0.1.3"
